--- a/config.json
+++ b/config.json
@@ -1,18 +1,18 @@
 {
-    "name": "Aluracord - Matrix (Fernando-Marinho)",
+    "name": "Aluracord",
     "theme": {
       "colors": {
         "primary": {
-          "050": "#E3F9E5",
-          "100": "#C1EAC5",
-          "200": "#A3D9A5",
-          "300": "#7BC47F",
-          "400": "#57AE5B",
-          "500": "#3F9142",
-          "600": "#2F8132",
-          "700": "#207227",
-          "800": "#0E5814",
-          "900": "#05400A"
+          "050": "#03045eff",
+          "100": "#023e8aff",
+          "200": "#0077b6ff",
+          "300": "#0096c7ff",
+          "400": "#00b4d8ff",
+          "500": "#48cae4ff",
+          "600": "#90e0efff",
+          "700": "#90e0efff",
+          "800": "#ade8f4ff",
+          "900": "#caf0f8ff"
         },
         "neutrals": {
           "000": "#FFFFFF",
